Add write logging to debug spurious global write
- Implemented write logging in both our interpreter and Frotz
- Format: [WRITE #N] @0xADDR byte/word 0xOLD -> 0xNEW
- Discovered spurious write to global 53 (0x031e) at instruction #6
- Our interpreter writes to 0x031e (varNum=69) which Frotz never touches
- Write happens at PC=0x3b65 after CALL 2 to routine at 0x3b4a
- Added detailed CURRENT_STATE.md documenting the bug and investigation
- Write protection working correctly for static/high memory
- Dictionary and tokenization confirmed working correctly

Key finding: setVariable is being called with varNum=69 instead of
expected value, causing write to wrong global variable. This may be
related to instruction decode error or store mechanism bug.

Next steps: Decode instruction at PC=0x3b65 to identify root cause.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,38 @@ dist/
 *.z[1-8]
 test-output/
 *~
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.pytest_cache/
+.coverage
+.mypy_cache/
+.dmypy.json
+dmypy.json
+zmachine-crash-*.json
+temp-*/
